--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   uuid: ^4.3.3
   path: ^1.9.0
   sqflite_common_ffi: ^2.3.3
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
