--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path: ^1.9.0
   sqflite_common_ffi: ^2.3.3
   flutter_staggered_animations: ^1.1.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
